# fastapi_costco

./: README.md  costco.db  database.py  loaders.py  main.py  models.py  pyproject.toml  requirements.txt
data/: costco.json  departments.json  load_data.py  load_departments.py  load_item.py
routers/: aisles.py  departments.py  items.py  products.py  sections.py
src/: database.py  loaders.py  main.py  models.py
src/data/: load_data.py
src/routers/: aisles.py  departments.py  products.py  sections.py
src/test/: conftest.py  test_main.py
src/test/test_routers/: conftest.py  test_aisles.py  test_departments.py  test_products.py  test_sections.py
