[tool.poetry]
name = "src"
version = "0.1.0"
description = "FastAPI backend for Costco React App"
authors = ["Stefan Musarra"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = "^0.111.1"
bcrypt = "^4.2.0"
cryptography = "^43.0.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
SQLAlchemy = "^2.0.29"
uvicorn = "^0.30.3"
passlib = "^1.7.4"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.8"
python-box = "^7.2.0"
sqlalchemy-serializer = "^1.4.22"
pytest = "^8.3.2"
alembic = "^1.13.2"
Jinja2 = "^3.1.4"
aiofiles = "^24.1.0"
typing-extensions = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
